[gd_scene load_steps=4 format=2]

[ext_resource path="res://misc/line-text-64.tres" type="DynamicFont" id=1]
[ext_resource path="res://Menus/Arcade/Scripts/Parts/Settings-Temp-Menu_VS.gd" type="Script" id=2]

[sub_resource type="Theme" id=1]

[node name="Menu_VS_Settings" type="Node2D"]
script = ExtResource( 2 )

[node name="ReferenceRect" type="ReferenceRect" parent="."]
margin_left = 40.0
margin_top = 270.0
margin_right = 1890.0
margin_bottom = 1045.0
border_color = Color( 1, 1, 1, 1 )
border_width = 3.0
editor_only = false

[node name="ReferenceRect_Stock" type="ReferenceRect" parent="."]
visible = false
margin_left = 60.0
margin_top = 320.0
margin_right = 290.0
margin_bottom = 390.0
border_color = Color( 1, 1, 1, 1 )
border_width = 4.0
editor_only = false

[node name="ReferenceRect_Score" type="ReferenceRect" parent="."]
visible = false
margin_left = 320.0
margin_top = 320.0
margin_right = 550.0
margin_bottom = 390.0
border_color = Color( 1, 1, 1, 1 )
border_width = 4.0
editor_only = false

[node name="ReferenceRect_Time" type="ReferenceRect" parent="."]
visible = false
margin_left = 570.0
margin_top = 320.0
margin_right = 800.0
margin_bottom = 390.0
border_color = Color( 1, 1, 1, 1 )
border_width = 4.0
editor_only = false

[node name="ReferenceRect_Yes" type="ReferenceRect" parent="."]
visible = false
margin_left = 730.0
margin_top = 890.0
margin_right = 875.0
margin_bottom = 960.0
border_color = Color( 1, 1, 1, 1 )
border_width = 4.0
editor_only = false

[node name="ReferenceRect_No" type="ReferenceRect" parent="."]
visible = false
margin_left = 900.0
margin_top = 890.0
margin_right = 1045.0
margin_bottom = 960.0
border_color = Color( 1, 1, 1, 1 )
border_width = 4.0
editor_only = false

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 80.0
margin_top = 320.0
margin_right = 749.0
margin_bottom = 675.0
rect_pivot_offset = Vector2( 1960, -90 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1779.0
margin_bottom = 67.0

[node name="Label_01" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_right = 261.0
margin_bottom = 67.0
rect_pivot_offset = Vector2( 1960, -250 )
custom_fonts/font = ExtResource( 1 )
text = "Stock  "

[node name="Label_02" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 265.0
margin_right = 526.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 1 )
text = "Score  "

[node name="Label_03" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 530.0
margin_right = 1779.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 1 )
text = "Time                              "

[node name="Label_01" type="Label" parent="VBoxContainer"]
margin_top = 71.0
margin_right = 1779.0
margin_bottom = 138.0
rect_pivot_offset = Vector2( 1960, -250 )
custom_fonts/font = ExtResource( 1 )

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 142.0
margin_right = 1779.0
margin_bottom = 209.0

[node name="Label_Stock2" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_right = 201.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 1 )
text = "Stock:"

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_left = 205.0
margin_top = 26.0
margin_right = 257.0
margin_bottom = 40.0
text = "             "

[node name="Label_Stock3" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_left = 261.0
margin_right = 299.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 1 )
text = "5"

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_left = 303.0
margin_top = 26.0
margin_right = 355.0
margin_bottom = 40.0
text = "             "

[node name="HSlider" type="HSlider" parent="VBoxContainer/HBoxContainer2"]
margin_left = 359.0
margin_right = 1779.0
margin_bottom = 67.0
size_flags_horizontal = 3
size_flags_vertical = 1
theme = SubResource( 1 )
min_value = 1.0
max_value = 99.0
value = 5.0
rounded = true

[node name="Label_02" type="Label" parent="VBoxContainer"]
margin_top = 213.0
margin_right = 1779.0
margin_bottom = 280.0
rect_pivot_offset = Vector2( 1960, -250 )
custom_fonts/font = ExtResource( 1 )

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 284.0
margin_right = 1779.0
margin_bottom = 351.0

[node name="Label_Score2" type="Label" parent="VBoxContainer/HBoxContainer3"]
margin_right = 201.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 1 )
text = "Score:"

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer3"]
margin_left = 205.0
margin_top = 26.0
margin_right = 257.0
margin_bottom = 40.0
text = "             "

[node name="Label_Score3" type="Label" parent="VBoxContainer/HBoxContainer3"]
margin_left = 261.0
margin_right = 298.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 1 )
text = "8"

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer3"]
margin_left = 302.0
margin_top = 26.0
margin_right = 354.0
margin_bottom = 40.0
text = "             "

[node name="HSlider" type="HSlider" parent="VBoxContainer/HBoxContainer3"]
margin_left = 358.0
margin_right = 1779.0
margin_bottom = 67.0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 1.0
max_value = 99.0
value = 5.0
rounded = true

[node name="Label_03" type="Label" parent="VBoxContainer"]
margin_top = 355.0
margin_right = 1779.0
margin_bottom = 422.0
rect_pivot_offset = Vector2( 1960, -250 )
custom_fonts/font = ExtResource( 1 )

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 426.0
margin_right = 1779.0
margin_bottom = 493.0

[node name="Label_Time2" type="Label" parent="VBoxContainer/HBoxContainer4"]
margin_right = 153.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 1 )
text = "Time:"

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer4"]
margin_left = 157.0
margin_top = 26.0
margin_right = 257.0
margin_bottom = 40.0
text = "                         "

[node name="Label_Time3" type="Label" parent="VBoxContainer/HBoxContainer4"]
margin_left = 261.0
margin_right = 299.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 1 )
text = "2"

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer4"]
margin_left = 303.0
margin_top = 26.0
margin_right = 355.0
margin_bottom = 40.0
text = "             "

[node name="HSlider" type="HSlider" parent="VBoxContainer/HBoxContainer4"]
margin_left = 359.0
margin_right = 1779.0
margin_bottom = 67.0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 1.0
max_value = 120.0
value = 6.0
rounded = true

[node name="Label_04" type="Label" parent="VBoxContainer"]
margin_top = 497.0
margin_right = 1779.0
margin_bottom = 564.0
rect_pivot_offset = Vector2( 1960, -250 )
custom_fonts/font = ExtResource( 1 )

[node name="HBoxContainer5" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 568.0
margin_right = 1779.0
margin_bottom = 635.0

[node name="Label_Death_Minus" type="Label" parent="VBoxContainer/HBoxContainer5"]
margin_right = 667.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 1 )
text = "Death Minus Point  "

[node name="Label_Death_Minus_Yes" type="Label" parent="VBoxContainer/HBoxContainer5"]
visible = false
margin_left = 671.0
margin_right = 784.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 1 )
text = "Yes"

[node name="Label_Death_Minus_No" type="Label" parent="VBoxContainer/HBoxContainer5"]
margin_left = 671.0
margin_right = 745.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 1 )
text = "No"

[node name="Label_05" type="Label" parent="VBoxContainer/HBoxContainer5"]
margin_left = 749.0
margin_right = 749.0
margin_bottom = 67.0
rect_pivot_offset = Vector2( 1960, -250 )
custom_fonts/font = ExtResource( 1 )

[node name="HBoxContainer6" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 639.0
margin_right = 1779.0
margin_bottom = 706.0

[node name="Label_Start_Gun" type="Label" parent="VBoxContainer/HBoxContainer6"]
margin_right = 548.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 1 )
text = "start with gun "

[node name="Label_Start_Gun_Yes" type="Label" parent="VBoxContainer/HBoxContainer6"]
visible = false
margin_left = 671.0
margin_right = 784.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 1 )
text = "Yes"

[node name="Label_Start_Gun_No" type="Label" parent="VBoxContainer/HBoxContainer6"]
margin_left = 552.0
margin_right = 626.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 1 )
text = "No"

[connection signal="value_changed" from="VBoxContainer/HBoxContainer2/HSlider" to="." method="_on_HSlider_Stock_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer3/HSlider" to="." method="_on_HSlider_Score_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer4/HSlider" to="." method="_on_HSlider_Time_value_changed"]
